# medmap-backend

./: .env  Procfile  build.sh  check_doctors.py  check_roles.py  db.sqlite3  debug_schedule.py  fix_roles_and_check_data.py  get_token.py  inspect_supabase.py  manage.py  netlify.toml  print_urls.py  pyproject.toml  requirements.txt  reset_admin_password.py  run_server.bat  setup.bat  test_admin_endpoints.py  test_api.py  test_bulk_delete.py  test_multi_schedule.py  test_signature.py  verify_api.py  verify_fixes.py  verify_system.py
bookings/: admin.py  models.py  serializers.py  views.py
bookings/migrations/: 0001_initial.py  0002_booking_booking_fee_booking_consultation_fee_and_more.py
chat/: models.py  serializers.py  views.py
chat/migrations/: 0001_initial.py
doctors/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
doctors/migrations/: 0001_initial.py  (+6 more)
frontend/: .env  COMPLIANCE-DEPLOYMENT.md  COMPLIANCE-GUIDE.md  DEPLOY_SUPABASE.md  README-Performance.md  TECH_STACK.html  TECH_STACK.md  bun.lockb  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
medmap_backend/: asgi.py  settings.py  urls.py  wsgi.py
medmap_notifications/: apps.py  models.py  signals.py  views.py
memberships/: models.py  urls.py  views.py
notifications/: models.py  serializers.py  signals.py  views.py
payments/: models.py  serializers.py  services.py  urls.py  views.py
system/: models.py  views.py
telecommunications/: apps.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  views.py
(+147 files in other folders)
