[project]
name = "medmap_be"
version = "1.0.0"
description = "MedMap Backend"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "asgiref==3.11.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "Django==5.0.3",
    "django-cors-headers==4.3.1",
    "django-filter==23.5",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.1",
    "gunicorn==21.2.0",
    "idna==3.6",
    "packaging==23.2",
    "Pillow==10.2.0",
    "psycopg2-binary==2.9.9",
    "PyJWT==2.8.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "sqlparse==0.4.4",
    "tzdata==2024.1",
    "urllib3==2.2.1",
    "dj-database-url==2.1.0",
    "whitenoise==6.6.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["medmap_backend", "users", "core", "payments", "doctors", "bookings", "memberships", "system", "chat", "medmap_notifications"]
